third_party/kiva-ep/vendor/mathgl-2.4.4/include/mgl2/mgl_pas.pas

/// Restore font (load default font for new HMGL objects)
procedure  mgl_restore_font(gr: HMGL); cdecl; external libmgl;
//-----------------------------------------------------------------------------
{== ../../include/mgl2/data_cf.h ==}
//-----------------------------------------------------------------------------
//-----------------------------------------------------------------------------
//-----------------------------------------------------------------------------
/// Get integer power of x
function  mgl_ipow(x: double;n: integer): double; cdecl; external libmgl;
/// Get number of seconds since 1970 for given string
function  mgl_get_time(const time: PChar;const fmt: PChar): double; cdecl; external libmgl;
/// Create HMDT object
function  mgl_create_data(): HMDT; cdecl; external libmgl;
/// Create HMDT object with specified sizes
function  mgl_create_data_size(nx: integer;ny: integer;nz: integer): HMDT; cdecl; external libmgl;
/// Create HMDT object with data from file
function  mgl_create_data_file(const fname: PChar): HMDT; cdecl; external libmgl;
/// Delete HMDT object
procedure  mgl_delete_data(dat: HMDT); cdecl; external libmgl;
/// Rearange data dimensions
procedure  mgl_data_rearrange(dat: HMDT;mx: integer;my: integer;mz: integer); cdecl; external libmgl;
/// Link external data array (don't delete it at exit)
procedure  mgl_data_link(dat: HMDT;A: Pmreal;mx: integer;my: integer;mz: integer); cdecl; external libmgl;
/// Allocate memory and copy the data from the (float *) array
procedure  mgl_data_set_float(dat: HMDT;const A: Preal;mx: integer;my: integer;mz: integer); cdecl; external libmgl;
/// Allocate memory and copy the data from the (double *) array
procedure  mgl_data_set_double(dat: HMDT;const A: Pdouble;mx: integer;my: integer;mz: integer); cdecl; external libmgl;
/// Allocate memory and copy the data from the (float **) array
/// Allocate memory and copy the data from the (double **) array
/// Allocate memory and copy the data from the (float ***) array
/// Allocate memory and copy the data from the (double ***) array
/// Import data from abstract type
procedure  mgl_data_set(dat: HMDT;const a: HMDT); cdecl; external libmgl;
/// Allocate memory and copy the data from the gsl_vector
procedure  mgl_data_set_vector(dat: HMDT;v: PGSLVector); cdecl; external libmgl;
/// Allocate memory and copy the data from the gsl_matrix
procedure  mgl_data_set_matrix(dat: HMDT;m: PGSLMatrix); cdecl; external libmgl;
/// Set value of data element [i,j,k]
procedure  mgl_data_set_value(dat: HMDT;v: mreal;i: integer;j: integer;k: integer); cdecl; external libmgl;
/// Get value of data element [i,j,k]
function  mgl_data_get_value(const dat: HMDT;i: integer;j: integer;k: integer): mreal; cdecl; external libmgl;
/// Allocate memory and scanf the data from the string
procedure  mgl_data_set_values(dat: HMDT;const val: PChar;nx: integer;ny: integer;nz: integer); cdecl; external libmgl;
/// Read data array from HDF file (parse HDF4 and HDF5 files)
function  mgl_data_read_hdf(d: HMDT;const fname: PChar;const data: PChar): integer; cdecl; external libmgl;
/// Read data from tab-separated text file with auto determining size
function  mgl_data_read(dat: HMDT;const fname: PChar): integer; cdecl; external libmgl;
/// Read data from text file with size specified at beginning of the file
function  mgl_data_read_mat(dat: HMDT;const fname: PChar;dim: integer): integer; cdecl; external libmgl;
/// Read data from text file with specifeid size
function  mgl_data_read_dim(dat: HMDT;const fname: PChar;mx: integer;my: integer;mz: integer): integer; cdecl; external libmgl;
/// Read data from tab-separated text files with auto determining size which filenames are result of sprintf(fname,templ,t) where t=from:step:to
function  mgl_data_read_range(d: HMDT;const templ: PChar;n1: double;n2: double;step: double;as_slice: integer): integer; cdecl; external libmgl;
/// Read data from tab-separated text files with auto determining size which filenames are satisfied to template (like "t_*.dat")
function  mgl_data_read_all(dat: HMDT;const templ: PChar;as_slice: integer): integer; cdecl; external libmgl;
/// Import data array from PNG file according color scheme
procedure  mgl_data_import(dat: HMDT;const fname: PChar;const scheme: PChar;v1: mreal;v2: mreal); cdecl; external libmgl;
/// Create or recreate the array with specified size and fill it by zero
procedure  mgl_data_create(dat: HMDT;nx: integer;ny: integer;nz: integer); cdecl; external libmgl;
/// Transpose dimensions of the data (generalization of Transpose)
procedure  mgl_data_transpose(dat: HMDT;const dim: PChar); cdecl; external libmgl;
/// Normalize the data to range [v1,v2]
procedure  mgl_data_norm(dat: HMDT;v1: mreal;v2: mreal;sym: integer;dim: integer); cdecl; external libmgl;
/// Normalize the data to range [v1,v2] slice by slice
procedure  mgl_data_norm_slice(dat: HMDT;v1: mreal;v2: mreal;dir: char;keep_en: integer;sym: integer); cdecl; external libmgl;
/// Get sub-array of the data with given fixed indexes
function  mgl_data_subdata(const dat: HMDT;xx: integer;yy: integer;zz: integer): HMDT; cdecl; external libmgl;
/// Get sub-array of the data with given fixed indexes (like indirect access)
function  mgl_data_subdata_ext(const dat: HMDT;const xx: HMDT;const yy: HMDT;const zz: HMDT): HMDT; cdecl; external libmgl;
/// Get column (or slice) of the data filled by formulas of named columns
function  mgl_data_column(const dat: HMDT;const eq: PChar): HMDT; cdecl; external libmgl;
/// Set names for columns (slices)
procedure  mgl_data_set_id(d: HMDT;const id: PChar); cdecl; external libmgl;
/// Equidistantly fill the data to range [x1,x2] in direction dir
procedure  mgl_data_fill(dat: HMDT;x1: mreal;x2: mreal;dir: char); cdecl; external libmgl;
/// Modify the data by specified formula assuming x,y,z in range [r1,r2]
procedure  mgl_data_fill_eq(gr: HMGL;dat: HMDT;const eq: PChar;const vdat: HMDT;const wdat: HMDT;const opt: PChar); cdecl; external libmgl;
/// Fill dat by interpolated values of vdat parametrically depended on xdat for x in range [x1,x2] using global spline
procedure  mgl_data_refill_gs(dat: HMDT;const xdat: HMDT;const vdat: HMDT;x1: mreal;x2: mreal;sl: integer); cdecl; external libmgl;
/// Fill dat by interpolated values of vdat parametrically depended on xdat for x in range [x1,x2]
procedure  mgl_data_refill_x(dat: HMDT;const xdat: HMDT;const vdat: HMDT;x1: mreal;x2: mreal;sl: integer); cdecl; external libmgl;
/// Fill dat by interpolated values of vdat parametrically depended on xdat,ydat for x,y in range [x1,x2]*[y1,y2]
procedure  mgl_data_refill_xy(dat: HMDT;const xdat: HMDT;const ydat: HMDT;const vdat: HMDT;x1: mreal;x2: mreal;y1: mreal;y2: mreal;sl: integer); cdecl; external libmgl;
/// Fill dat by interpolated values of vdat parametrically depended on xdat,ydat,zdat for x,y,z in range [x1,x2]*[y1,y2]*[z1,z2]
procedure  mgl_data_refill_xyz(dat: HMDT;const xdat: HMDT;const ydat: HMDT;const zdat: HMDT;const vdat: HMDT;x1: mreal;x2: mreal;y1: mreal;y2: mreal;z1: mreal;z2: mreal); cdecl; external libmgl;
/// Fill dat by interpolated values of vdat parametrically depended on xdat,ydat,zdat for x,y,z in axis range
procedure  mgl_data_refill_gr(gr: HMGL;dat: HMDT;const xdat: HMDT;const ydat: HMDT;const zdat: HMDT;const vdat: HMDT;sl: integer;const opt: PChar); cdecl; external libmgl;
/// Set the data by triangulated surface values assuming x,y,z in range [r1,r2]
procedure  mgl_data_grid(gr: HMGL;d: HMDT;const xdat: HMDT;const ydat: HMDT;const zdat: HMDT;const opt: PChar); cdecl; external libmgl;
/// Set the data by triangulated surface values assuming x,y,z in range [x1,x2]*[y1,y2]
procedure  mgl_data_grid_xy(d: HMDT;const xdat: HMDT;const ydat: HMDT;const zdat: HMDT;x1: mreal;x2: mreal;y1: mreal;y2: mreal); cdecl; external libmgl;
/// Put value to data element(s)
procedure  mgl_data_put_val(dat: HMDT;val: mreal;i: integer;j: integer;k: integer); cdecl; external libmgl;
/// Put array to data element(s)
procedure  mgl_data_put_dat(dat: HMDT;const val: HMDT;i: integer;j: integer;k: integer); cdecl; external libmgl;
/// Modify the data by specified formula
procedure  mgl_data_modify(dat: HMDT;const eq: PChar;dim: integer); cdecl; external libmgl;
/// Modify the data by specified formula
procedure  mgl_data_modify_vw(dat: HMDT;const eq: PChar;const vdat: HMDT;const wdat: HMDT); cdecl; external libmgl;
/// Reduce size of the data
procedure  mgl_data_squeeze(dat: HMDT;rx: integer;ry: integer;rz: integer;smooth: integer); cdecl; external libmgl;
/// Returns pointer to data element [i,j,k]
function mgl_data_value(dat: HMDT;i: integer;j: integer;k: integer): Pmreal; cdecl; external libmgl;
/// Returns pointer to internal data array
function mgl_data_data(dat: HMDT): Pmreal; cdecl; external libmgl;
/// Gets the x-size of the data.
function  mgl_data_get_nx(const d: HMDT): integer; cdecl; external libmgl;
/// Gets the y-size of the data.
function  mgl_data_get_ny(const d: HMDT): integer; cdecl; external libmgl;
/// Gets the z-size of the data.
function  mgl_data_get_nz(const d: HMDT): integer; cdecl; external libmgl;
/// Get the data which is direct multiplication (like, d[i,j] = this[i]*a[j] and so on)
function  mgl_data_combine(const dat1: HMDT;const dat2: HMDT): HMDT; cdecl; external libmgl;
/// Extend data dimensions
procedure  mgl_data_extend(dat: HMDT;n1: integer;n2: integer); cdecl; external libmgl;
/// Insert data rows/columns/slices
procedure  mgl_data_insert(dat: HMDT;dir: char;at: integer;num: integer); cdecl; external libmgl;
/// Delete data rows/columns/slices
procedure  mgl_data_delete(dat: HMDT;dir: char;at: integer;num: integer); cdecl; external libmgl;
/// Joind another data array
procedure  mgl_data_join(dat: HMDT;const d: HMDT); cdecl; external libmgl;
/// Smooth the data on specified direction or directions
procedure  mgl_data_smooth(d: HMDT;const dirs: PChar;delta: mreal); cdecl; external libmgl;
/// Get array which is result of summation in given direction or directions
function  mgl_data_sum(const dat: HMDT;const dir: PChar): HMDT; cdecl; external libmgl;
/// Get array which is result of maximal values in given direction or directions
function  mgl_data_max_dir(const dat: HMDT;const dir: PChar): HMDT; cdecl; external libmgl;
/// Get array which is result of minimal values in given direction or directions
function  mgl_data_min_dir(const dat: HMDT;const dir: PChar): HMDT; cdecl; external libmgl;
/// Cumulative summation the data in given direction or directions
procedure  mgl_data_cumsum(dat: HMDT;const dir: PChar); cdecl; external libmgl;
/// Integrate (cumulative summation) the data in given direction or directions
procedure  mgl_data_integral(dat: HMDT;const dir: PChar); cdecl; external libmgl;
/// Differentiate the data in given direction or directions
procedure  mgl_data_diff(dat: HMDT;const dir: PChar); cdecl; external libmgl;
/// Differentiate the parametrically specified data along direction v1 with v2,v3=const (v3 can be NULL)
procedure  mgl_data_diff_par(dat: HMDT;const v1: HMDT;const v2: HMDT;const v3: HMDT); cdecl; external libmgl;
/// Double-differentiate (like Laplace operator) the data in given direction
procedure  mgl_data_diff2(dat: HMDT;const dir: PChar); cdecl; external libmgl;
/// Swap left and right part of the data in given direction (useful for Fourier spectrum)
procedure  mgl_data_swap(dat: HMDT;const dir: PChar); cdecl; external libmgl;
/// Roll data along direction dir by num slices
procedure  mgl_data_roll(dat: HMDT;dir: char;num: integer); cdecl; external libmgl;
/// Mirror the data in given direction (useful for Fourier spectrum)
procedure  mgl_data_mirror(dat: HMDT;const dir: PChar); cdecl; external libmgl;
/// Sort rows (or slices) by values of specified column
procedure  mgl_data_sort(dat: HMDT;idx: integer;idy: integer); cdecl; external libmgl;
/// Apply Hankel transform
procedure  mgl_data_hankel(dat: HMDT;const dir: PChar); cdecl; external libmgl;
